--- a/src/components/Trending/Trending.css
+++ b/src/components/Trending/Trending.css
@@ -67,12 +67,14 @@
 .moreBtn {
     display: block;
     margin: auto;
-    background: none;
-    color: #5A5A5A;
+    background: rgba(0, 0, 0, 0.50);
+    color: #949494;
     font-family: var(--lato);
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 700;
     transition: 0.4s ease-in-out;
+    padding: 15px 30px;
+    border-radius: 30px;
 }
 
 .moreBtn:hover {
