login register function added

--- a/src/Shared/Header/Header.css
+++ b/src/Shared/Header/Header.css
@@ -62,6 +62,9 @@ header,
 .navbar-toggler:focus {
     box-shadow: none;
 }
+.login_padding{
+    margin:8px;
+}
 
 .searchNav {
     position: relative;
