--- a/src/components/Artist/Artist.css
+++ b/src/components/Artist/Artist.css
@@ -1,14 +1,35 @@
+
+/* Featured Artists Start */
+
 .artist {
     padding: 53px 112px;
     border-radius: 40px;
     background: #131619;
+    overflow: hidden;
 }
 
-.proImg {
+.artist .proImg,
+.artist .proImg img {
     width: 130px;
     height: 130px;
     border-radius: 50%;
+
 }
+
+.artist .proImg img:hover {
+    transform: scale(1.02);
+    cursor: pointer;
+}
+
+.profileInner a img {
+    opacity: .9;
+    transition: 0.4s ease-in-out;
+}
+
+.profileInner a img:hover {
+    opacity: 1;
+}
+
 
 .artist p,
 .viewProfile {
@@ -24,10 +45,11 @@
     background: #000 !important;
     padding: 8px 18px;
     transition: 0.4s ease-in-out;
-    font-size: 10px;
 }
 
 .viewProfile:hover {
     opacity: .9;
     background-color: #292e32 !important;
 }
+
+/* Featured Artists End*/
